--- a/app/src/main/res/layout/stop.xml
+++ b/app/src/main/res/layout/stop.xml
@@ -7,13 +7,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.scurrae.chris.timedown.MainActivity">
+    tools:context="com.scurrae.chris.timedown.MainActivity"
+    android:background="#000">
 
 
     <Chronometer
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ed2"
+        android:textColor="@android:color/white"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -24,6 +26,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/tx2"
         android:layout_marginTop="78dp"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -32,6 +36,8 @@
         android:layout_height="wrap_content"
         android:text="Timer Start"
         android:id="@+id/but2"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
